--- a/404.html
+++ b/404.html
@@ -34,7 +34,7 @@
 <meta property="og:locale" content="en" />
 <link rel="canonical" href="https://nanwang2016.github.io/404.html" />
 <meta property="og:url" content="https://nanwang2016.github.io/404.html" />
-<meta property="og:site_name" content="Nan W" />
+<meta property="og:site_name" content="Nan’s Developer Blog" />
 <meta property="og:type" content="website" />
 <meta name="twitter:card" content="summary" />
 <meta property="twitter:title" content="404: Page not found" />
@@ -44,7 +44,7 @@
 <!-- End Jekyll SEO tag -->
 
 
-  <title>404: Page not found | Nan W
+  <title>404: Page not found | Nan's Developer Blog
   </title>
 
   <!--
@@ -61,8 +61,8 @@
   <link rel="manifest" href="/assets/img/favicons/site.webmanifest">
 
 <link rel="shortcut icon" href="/assets/img/favicons/favicon.ico">
-<meta name="apple-mobile-web-app-title" content="Nan W">
-<meta name="application-name" content="Nan W">
+<meta name="apple-mobile-web-app-title" content="Nan's Developer Blog">
+<meta name="application-name" content="Nan's Developer Blog">
 <meta name="msapplication-TileColor" content="#da532c">
 <meta name="msapplication-config" content="/assets/img/favicons/browserconfig.xml">
 <meta name="theme-color" content="#ffffff">
@@ -210,9 +210,9 @@
 
 <aside aria-label="Sidebar" id="sidebar" class="d-flex flex-column align-items-end">
   <header class="profile-wrapper">
-    <a href="/" id="avatar" class="rounded-circle"><img src="https:nanwang2016.github.io/assets/img/favicons/favicon.ico" width="112" height="112" alt="avatar" onerror="this.style.display='none'"></a>
+    <a href="/" id="avatar" class="rounded-circle"><img src="https:nanwang2016.github.io/assets/img/favicons/web-app-manifest-192x192.png" width="112" height="112" alt="avatar" onerror="this.style.display='none'"></a>
 
-    <a class="site-title d-block" href="/">Nan W</a>
+    <a class="site-title d-block" href="/">Nan's Developer Blog</a>
     <p class="site-subtitle fst-italic mb-0">A Software Engineer's Blog</p>
   </header>
   <!-- .profile-wrapper -->
